--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "bootstrap": "^4.0.0-alpha.6",
-    "bootstrap-sass": "^3.3.7",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
-    "ember-bootstrap": "1.0.0-alpha.5",
     "ember-cli": "2.11.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
@@ -39,11 +36,15 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
+    "ember-simple-auth": "1.2.0",
     "ember-source": "^2.11.0",
     "loader.js": "^4.0.10"
   },
   "engines": {
     "node": ">= 0.12.0"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "ember-network": "^0.3.1"
+  }
 }
