--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
   },
   "private": true,
   "dependencies": {
-    "bower": "^1.8.2",
-    "ember-network": "^0.3.1"
+    "bower": "^1.8.2"
   }
 }
